# MolSpin

./: .gitignore  CMakeLists.txt  Dockerfile  main.cpp  makefile
.github/scripts/: package-linux.sh  package-macos.sh  package-windows.ps1
.github/workflows/: c-cpp.yml
Example/NV-Centre/: Basic_NV_centre.msd  NV_centre_GS_only.msd  NV_centre_GS_only_(N14+C13).msd
Example/magnetoreception/quantumyield_standard/: example_2_static.msd
Example/spectroscopy/: trepr_next_test_full.msd  trepr_next_test_intermediate.msd  trepr_next_test_min.msd
MSDParser/: ObjectParser.cpp
RunSection/: ActionTarget.h  BasicTask.cpp  BasicTask.h  RunSection_CreateTask.cpp  Utility.cpp  Utility.h
RunSection/Actions/: ActionFibonacciSphere.cpp  ActionRotateVector.cpp
RunSection/Tasks/: TaskDynamicHSDirectYields.cpp  TaskDynamicHSStochTimeEvo.cpp  TaskDynamicHSStochYields.cpp  TaskGammaCompute.cpp  TaskHamiltonianEigenvalues.cpp  TaskMultiRadicalPairSSTimeEvo.cpp  TaskMultiStaticSSNakajimaZwanzigTimeEvo.cpp  TaskMultiStaticSSRedfieldTimeEvo.cpp  TaskMultiStaticSSTimeEvo.cpp  TaskMultiStaticSSTimeEvoSpectra.cpp  TaskPeriodicHSTimeEvo.cpp  TaskPeriodicSSTimeEvo.cpp  TaskStaticHSDirectSpectra.cpp  TaskStaticHSDirectSpectra.h  TaskStaticHSDirectYields.cpp  TaskStaticHSStochTimeEvo.cpp  TaskStaticHSStochYields.cpp  TaskStaticHSTrEPRSpectra.cpp  TaskStaticHSTrEPRSpectra.h  TaskStaticRPOnlyHSSymDecRedfield.cpp  TaskStaticSS.cpp  TaskStaticSSCIDNP.cpp  TaskStaticSSNakajimaZwanzig.cpp  TaskStaticSSNakajimaZwanzigTimeEvo.cpp  TaskStaticSSPowderSpectra.cpp  TaskStaticSSPowderSpectra.h  TaskStaticSSPowderSpectraNakajimaZwanzig.cpp  TaskStaticSSPowderSpectraNakajimaZwanzig.h  TaskStaticSSPump.cpp  TaskStaticSSRedfieldTimeEvo.cpp  TaskStaticSSRedfieldTimeEvoSparse.cpp  TaskStaticSSSpectra.cpp  TaskStaticSSSpectra.h  TaskStaticSSSpectraNakajimaZwanzig.cpp  TaskStaticSSSpectraNakajimaZwanzig.h  TaskStaticSSTimeEvo.cpp
SpinAPI/: Interaction.cpp  Interaction.h  ProxyWrapper.h  SpinAPIDefines.h  SpinSpace.cpp  SpinSpace.h  StandardOutput.cpp  SubSystem.cpp  Tensor.h
SpinAPI/SpinSpace/: SpinSpace_hamiltonians.cpp  SpinSpace_operators.cpp  SpinSpace_pulses.cpp  SpinSpace_relaxation.cpp  SpinSpace_states.cpp
Tests/: tests_TaskStaticHSTrEPRSpectra.cpp  tests_TaskStaticPowderSpectra.cpp  tests_spinapi.cpp
vcpkg-triplets/: x64-windows-clangcl.cmake
